# open-loops

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ONBOARDING.md  README.md  ROADMAP.md  SECURITY.md  _config.yml  build.rs  cliff.toml  deny.toml  dist-workspace.toml  justfile  lefthook.yml  release-plz.toml  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-crate.yml  release-plz.yml  release.yml
docs/: configuration.md  demo.cast  distribution.md  features.md  setup.md
docs/architecture/: 00-overview.md  01-discovery.md  02-sessions-attribution.md  03-query-engine.md  04-inventory-evidence.md  05-resume-distill.md  06-cache-index.md  07-config-state.md  08-cli-output.md  09-build-ci-release.md  README.md
docs/audit/: review-2026-06-18_hygiene.md  review-2026-06-29_09-15.md  test-logging-2026-06-18_15-00.md
docs/decisions/: 0001-mvp-pull-only.md  0002-git-e-llm-via-shell-out.md  0003-query-engine.md  0004-fase2-evidence-snapshot.md  0005-repo-discovery-via-git.md  0006-ci-msrv-cross-os.md  0007-release-plz-cargo-dist-split.md  0008-sqlite-index.md
docs/launch/: show-hn.md
docs/superpowers/plans/: 2026-06-10-open-loops-mvp.STATUS.md  2026-06-10-open-loops-mvp.md  2026-06-23-worktree-inventory.md  2026-06-24-query-engine-phase1.md  2026-06-25-scanner-bare-worktree-discovery.md  2026-06-25-worktree-session-attribution.md  2026-06-26-ci-hardening-wave1.md  2026-06-26-inventory-cache-phase3.md  2026-06-26-release-completeness-wave2-3.md  2026-06-28-query-engine-phase4-contexts.md  2026-06-29-architecture-domain-docs.md  2026-06-29-sqlite-index-migration.md
docs/superpowers/specs/: 2026-06-10-open-loops-mvp-design.md  2026-06-23-worktree-inventory-design.md  2026-06-25-ci-hardening-design.md  2026-06-25-scanner-bare-worktree-discovery.md  2026-06-25-worktree-session-attribution.md  2026-06-26-library-maturity-oss-health-design.md  2026-06-26-release-completeness-automation-design.md  2026-06-29-architecture-domain-docs-design.md
scripts/: demo.sh
scripts/stress/: README.md  bench.sh  gen_fixtures.sh  lib.sh  regress.sh
src/: cache.rs  cli.rs  cli_command.rs  config.rs  distill.rs  error.rs  ignores.rs  inventory.rs  lib.rs  main.rs  output.rs  parallel.rs  query.rs  scanner.rs  state.rs  testutil.rs  worktrees.rs
src/index/: mod.rs
src/sessions/: claude_code.rs  mod.rs
tests/: cli.rs
