[package]
name = "open-loops"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Recupere o contexto de trabalhos pausados: o que começou, onde parou, qual o próximo passo"
repository = "https://github.com/gustavo/open-loops"

[lib]
name = "open_loops"
path = "src/lib.rs"

[[bin]]
name = "loops"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
