[package]
name = "open-loops"
version = "1.4.0"
edition = "2021"
rust-version = "1.89"
authors = ["Gustavo Carvalho <gustavoooliveiradecarvalho@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Recupere o contexto de trabalhos pausados: o que começou, onde parou, qual o próximo passo"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "worktree", "context", "ai", "agents"]
repository = "https://github.com/carvalhosauro/open-loops"
homepage = "https://github.com/carvalhosauro/open-loops"

[lib]
name = "open_loops"
path = "src/lib.rs"

[[bin]]
name = "loops"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"

[profile.release]
lto = "thin"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
